fix: align detail header with grid headers

--- a/sencha-workspace/SlateTasksManager/sass/src/view/TaskDetails.scss
+++ b/sencha-workspace/SlateTasksManager/sass/src/view/TaskDetails.scss
@@ -2,12 +2,15 @@
     border-color: $grid-header-border-color;
     border-width: 0 0 1px;
 
+
     h4 {
         margin: .25em 0;
     }
 
     .x-panel-header {
         background-color: $grid-header-background-color;
+
+        padding: 3px 16px 3px !important;
 
         .x-title {
             color: $grid-column-header-color;
